--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,9 @@
 == README
 
+Coder Manual project application
+Subscription-based web application
+htt://codermanual.com
+
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
